--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  flutter_spinkit: ^5.2.0
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   flutter_test:
