--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   get: ^4.6.5
   flutter_spinkit: ^5.2.0
   shared_preferences: ^2.0.8
+  date_format: ^2.0.7
+  numberpicker: ^2.1.2
 
 dev_dependencies:
   flutter_test:
